<resources>
    <string name="app_name">CHICHI</string>
    <string name="sample1">1. 검사자 분의 성별이 어떻게 되십니까? </string>
    <string name="sample2">2. 검사자 분의 성함이 어떻게 되십니까? </string>
    <string name="sample3">3. 검사자 분의 생년월일이 어떻게 되십니까? </string>
    <string name="sample4">4. 검사자 분의 핸드폰번호가 어떻게 되십니까? </string>
    <string name="sample5">5. 검사자 분의 주소가 어떻게 되십니까?                   (OO도 OO시) </string>
    <string name="sample6">6. 검사자 분은 결혼을 하셨습니까? </string>
    <string name="sample7">6-1. 기혼이시라면 자녀수는 어떻게 되십니까? </string>
    <string name="sample8">7. 검사자 분의 프로필 사진을 등록해주세요. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
