<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toobar_include"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/toobar_include"
        android:background="@drawable/gradient" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/backgroundView"
        android:layout_marginLeft="5dp"
        android:background="@drawable/dropshadow" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/InspectorSurveyProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/initprofile" />

    <ScrollView
        android:layout_below="@+id/backgroundView"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TableLayout
                android:id="@+id/inspectorSurveyTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="80dp"
                android:background="#B3FFFFFF">

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample1"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="남성"
                        android:textSize="20dp"
                        android:textStyle="bold"></CheckBox>

                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="여성"
                        android:textSize="20dp"
                        android:textStyle="bold"></CheckBox>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample2"
                        android:textSize="17dp"
                        android:textStyle="bold"></TextView>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="이름을 입력하세요."
                        android:textStyle="bold"></EditText>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="검사자 분의 비밀번호를 정해주세요"
                        android:textSize="17dp"
                        android:textStyle="bold"></TextView>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="비밀번호을 입력하세요."
                        android:textStyle="bold"></EditText>
                </TableRow>


                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample3"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="200dp"
                        android:layout_height="40dp"></Spinner>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample4"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="번호를 입력하세요."
                        android:textStyle="bold"></EditText>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample5"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="주소를 입력하세요."
                        android:textStyle="bold"></EditText>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample6"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="200dp"
                        android:layout_height="40dp"></Spinner>
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="left"
                        android:text="@string/sample7"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="숫자만 적으세요."
                        android:textStyle="bold"></EditText>
                </TableRow>


                <TableRow android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/next"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_below="@id/textView3"
                        android:layout_gravity="right"
                        android:text="다음"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>